# haskell-kraken-exchange-api

./: Dockerfile  README.md  kraken-exchange-api.cabal
.github/workflows/: docker.yaml  haskell.yml
app/: Main.hs
src/KrakenExchange/: API.hs  Parse.hs  Rest.hs  Types.hs  Util.hs
test/: RestSpec.hs
