name:                kraken-exchange-api
version:             0.1.0.0
synopsis:            Kraken exchange API binding
description:         Please see README.md
homepage:            https://github.com/2nd-Layer/haskell-kraken-exchange-api
license:             MIT
license-file:        LICENSE
author:              Mark Stopka
maintainer:          mark.stopka@perlur.cloud
copyright:           Copyright (c) 2020 PERLUR Group
category:            tbc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  hs-source-dirs:      src
  exposed-modules:     KrakenExchange.API
                     , KrakenExchange.Parse
                     , KrakenExchange.Rest
                     , KrakenExchange.Types
                     , KrakenExchange.Util
  build-depends:       aeson
                     , aeson-casing
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , byteable
                     , bytestring
                     , cryptohash
                     , data-default
                     , either
                     , envy
                     , hashable
                     , microlens
                     , scientific
                     , servant
                     , servant-client
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
                     , http-api-data
                     , http-client-tls
  default-extensions:  DataKinds
                       DeriveGeneric
                       DeriveAnyClass
                       FlexibleInstances
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeOperators

executable kraken
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , data-default
                     , kraken-exchange-api
                     , text
                     , transformers
  default-extensions:  OverloadedStrings

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kraken-exchange-api
                     , hspec
                     , QuickCheck
                     
source-repository head
  type:     git
  location: https://github.com/2nd-Layer/haskell-kraken-exchange-api
